// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTypography component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <span
    class="c0"
  >
    Hello
  </span>
</div>
`;

exports[`Headline component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.75rem;
  line-height: 1.29em;
  margin-bottom: 0.5em;
}

<div>
  <h2
    class="c0"
  >
    Hello
  </h2>
</div>
`;

exports[`InfoBold component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`InfoText component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Paragraph component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`ParagraphBold component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Subtitle component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
}

<div>
  <h4
    class="c0"
  >
    Hello
  </h4>
</div>
`;

exports[`Title component  Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.3333333em;
  margin-bottom: 0.5em;
}

<div>
  <h3
    class="c0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant button Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <span
    class="c0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant button Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <span
    class="c0"
  >
    Hello
  </span>
</div>
`;

exports[`Typography component with variant headline Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.75rem;
  line-height: 1.29em;
  margin-bottom: 0.5em;
}

<div>
  <h2
    class="c0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant headline Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.75rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

<div>
  <h2
    class="c0"
  >
    Hello
  </h2>
</div>
`;

exports[`Typography component with variant info Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant info Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant infoBold Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraph Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant paragraphBold Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant subtitle Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
}

<div>
  <h4
    class="c0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant subtitle Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0;
}

<div>
  <h4
    class="c0"
  >
    Hello
  </h4>
</div>
`;

exports[`Typography component with variant title Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.3333333em;
  margin-bottom: 0.5em;
}

<div>
  <h3
    class="c0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant title Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1.5rem;
  line-height: 1.3333333em;
  margin-bottom: 0;
}

<div>
  <h3
    class="c0"
  >
    Hello
  </h3>
</div>
`;

exports[`Typography component with variant undefined Render component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0.75em;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;

exports[`Typography component with variant undefined Render inline component 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  margin-bottom: 0;
}

<div>
  <p
    class="c0"
  >
    Hello
  </p>
</div>
`;
